--- a/styles/app.css
+++ b/styles/app.css
@@ -1,9 +1,21 @@
 .card {
   float: left;
   border: solid 1px black;
-  width: 100px;
+  width: 120px;
   border-radius: 5px;
-  height: 140px;
+  height: 167px;
+  margin-right: 20px;
+}
+
+.points {
+  position: absolute;
+  left:420px;
+  font-size: 200%;
+  top: 30px;
+  border: solid 1px black;
+  width: 120px;
+  border-radius: 5px;
+  height: 100px;
   margin-right: 20px;
 }
 
@@ -13,4 +25,25 @@
 
 .hand {
   overflow: auto;
+}
+
+.app {
+  position: absolute;
+  left: 5%;
+  top: 5%;
+  /*position: absolute;
+  left: 50%;
+  transform: translateX(-50%);*/
+}
+
+body {
+  background-image: url("../img/nature.gif");
+  background-size: 100% 100%;
+  font-family: sans-serif;
+  text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
+  color: #7ec0ee;
 }
